tdf#87668 Add control to show or hide "Original Size" option.

Change-Id: I022ff86af2e480b061023aac50ff9f79fc6dbf9e
Signed-off-by: Gulsah Kose <gulsah.1004@gmail.com>
Reviewed-on: https://gerrit.libreoffice.org/24263
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>