sd/source/ui/view/drviews7.cxx
@@ -1328,6 +1328,17 @@ void DrawViewShell::GetMenuState( SfxItemSet &rSet )
                     {
                         bSingleGraphicSelected = nMarkCount == 1;
                         const SdrGrafObj* pSdrGrafObj = static_cast< const SdrGrafObj* >(pObj);
+
+                        // Current size of the OBJ_GRAF
+                        const Rectangle aRect = static_cast<SdrObject*>(pObj)->GetLogicRect();
+                        const Size aCurrentSizeofObj = aRect.GetSize();
+
+                        // Original size of the OBJ_GRAF
+                        const Size aOriginalSizeofObj = pSdrGrafObj->getOriginalSize();
+
+                        if(aCurrentSizeofObj == aOriginalSizeofObj )
+                            rSet.DisableItem(SID_ORIGINAL_SIZE);
+
                         switch(pSdrGrafObj->GetGraphicType())
                         {
                             case GRAPHIC_BITMAP :
